aoc22: enable profiling