@@ -7,6 +7,7 @@
                  [hato "0.9.0"]]
   :global-vars {*warn-on-reflection* true}
   :main ^:skip-aot t.core
+  :jvm-opts ["-Xverify:none"]
   :plugins [[com.jakemccrary/lein-test-refresh "0.25.0"]]
   :target-path "target/%s"
   :test-refresh {:quiet true
